# ZControl

./: CMakeLists.txt  README.md  ZControl_en_GB.ts  cyclewindow.cpp  cyclewindow.h  cyclewindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  my.cnf  plcs.cpp  plcs.h  zcontrol.ini  zcontrol.qrc  zmariadb.cpp  zmariadb.h  zplc.cpp  zplc.h
EtherNetIP/: zEthernetIP.cpp  zEthernetIP.h  zNode.h  zVardescr.h  zVariabledata.h  zethernetip.cpp
http/: zhttpservice.cpp  zhttpservice.h  ztelegramservice.cpp  ztelegramservice.h
mysql/: mariadb_version.h
